syntax = "proto3";

package protobuf;

service AnsibleRunner {
    rpc Create (Cluster) returns (stream TaskStatus) {}
    rpc Delete (Cluster) returns (stream TaskStatus) {}
    rpc Update (Cluster) returns (stream TaskStatus) {}
    rpc GetMasterIP (Cluster) returns (stream TaskStatus) {}
}

message Project {
    string ID = 1;
    string Name = 2;
    string DisplayName = 3;
    int32 GroupID = 4;
    string Description = 5;
    string DefaultImage = 6;
}

message Cluster {
    string ID = 1;
    string Name = 2;
    string DisplayName = 3;
    string HostURL = 4;
    string EntityStatus = 5;
    string ClusterType = 6;
    repeated Service Services = 7;
    int32 NHosts = 8;
    string MasterIP = 9;
    string ProjectID = 10;
    string Description = 11;
    string Image = 12; 
}

message Service {
    string ID = 1;
    string Name = 2;
    string Type = 3;
    string ClusterRef = 4;
    string ServiceState = 5;
    string ServiceURL = 6;
    map<string, string> Config = 7;
    string DisplayName = 8;
    string EntityStatus = 9;
    string Version = 10;
    string URL = 11;
    string Description = 12;
//    repeated DependencyConfig Dependencies = 13;
}

//message DependencyConfig {
//    string ServiceType = 1; //name of service type, on which this service depends
//    string ServiceVersion = 2;
//}

message Template {
    string ID = 1;
    string ProjectID = 2;
    string Name = 3;
    string DisplayName = 4;
    repeated Service Services = 5;
    int32 NHosts = 6;
    string Description = 7;
}

message TaskStatus {
    string Status = 1;
}

message ServiceType {
    string ID = 1;
    string Type = 2;
    string Description = 3;
    repeated ServiceVersion Versions = 4;
    string DefaultVersion = 5;
}

message ServiceVersion {
    string ID = 1;
    string Version = 2;
    string Description = 3;
    repeated ServiceConfig Configs = 4;
    string DownloadURL = 5; //if service has download url
    repeated ServiceDependency Dependencies = 6; //list of service-dependencies for this service version
}

message ServiceConfig {
    string ParameterName = 1; //name for ansible extra vars
    string Type = 2; //string, bool, float or int
    repeated string PossibleValues = 3; //TODO: add stored functions for values verification
    string DefaultValue = 4;
    bool Required = 5; //add this param to ansible extra vars or no
    string Description = 6;
    string AnsibleVarName = 7;
}

message ServiceDependency {
    string ServiceType = 1; //name of service type, on which this service version depends
    repeated string ServiceVersions = 2; //list of depended service versions that could be used with this service version
    string DefaultServiceVersion = 3; //default dependent service version
    string Description = 4;
    //bool Required = 5; //is this dependency required
}

message Image {
    string ID = 1;
    string Name = 2;
    string AnsibleUser = 3;
    string CloudImageID = 4;
}
